--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,72 @@
 version: "3.9"
 services:
-  db:
+  db1:
     image: clickhouse/clickhouse-server
+    restart: always
     ports:
-      - "${DB_PORT}:${DB_PORT}"
+      - "${CLICKHOUSE_PORT}:${CLICKHOUSE_PORT}"
     volumes:
       - ./.volumes/clickhouse:/var/lib/clickhouse
       - ./.volumes/clickhouse-logs:/var/log/clickhouse-server
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
     networks:
-      - servernet
+      - net1
+    environment:
+      CLICKHOUSE_DB: ${CLICKHOUSE_DB_NAME}
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER}
+      CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
+      CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
+
+  db2:
+    image: postgres
+    restart: always
+    ports:
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+    volumes:
+      - ./.volumes/postgres:/var/lib/postgresql/data
+    networks:
+      - net1
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
 
   vgserver:
-    environment:
-      DB_HOST: db
-      DB_USER: ${DB_USER}
-      DB_PASS: ${DB_PASS}
-      DB_NAME: ${DB_NAME}
-      DB_PORT: ${DB_PORT}
-      DEBUG: ${DEBUG}
     depends_on:
-      - db
+      - db1
+      - db2
     build: .
     networks:
-      - servernet
+      - net1
+    environment:
+      CLICKHOUSE_HOST: db1
+      CLICKHOUSE_PORT: ${CLICKHOUSE_PORT}
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER}
+      CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
+      CLICKHOUSE_DB_NAME: ${CLICKHOUSE_DB_NAME}
+      CLICKHOUSE_MAX_IDLE_CONNS: ${CLICKHOUSE_MAX_IDLE_CONNS}
+      CLICKHOUSE_MAX_OPEN_CONNS: ${CLICKHOUSE_MAX_OPEN_CONNS}
+      CLICKHOUSE_CONN_MAX_LIFETIME_MINUTES: ${CLICKHOUSE_CONN_MAX_LIFETIME_MINUTES}
+      CLICKHOUSE_CONN_TIMEOUT_SECONDS: ${CLICKHOUSE_CONN_TIMEOUT_SECONDS}
+      CLICKHOUSE_MIG_VERSION: ${CLICKHOUSE_MIG_VERSION}
+      CLICKHOUSE_MIG_PATH: ${CLICKHOUSE_MIG_PATH}
+
+      POSTGRES_HOST: db2
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
+      POSTGRES_MAX_IDLE_CONNS: ${POSTGRES_MAX_IDLE_CONNS}
+      POSTGRES_MAX_OPEN_CONNS: ${POSTGRES_MAX_OPEN_CONNS}
+      POSTGRES_CONN_MAX_LIFETIME_MINUTES: ${POSTGRES_CONN_MAX_LIFETIME_MINUTES}
+      POSTGRES_CONN_TIMEOUT_SECONDS: ${POSTGRES_CONN_TIMEOUT_SECONDS}
+      POSTGRES_MIG_VERSION: ${POSTGRES_MIG_VERSION}
+      POSTGRES_MIG_PATH: ${POSTGRES_MIG_PATH}
+      SKIP_MIGRATIONS: ${SKIP_MIGRATIONS}
+      DEBUG: ${DEBUG}
 
 networks:
-  servernet:
+  net1:
